triage-party/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: triage-party
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: triage-party
