triage-party/base/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: triage-party
spec:
  to:
    kind: Service
    name: triage-party
